--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -24,11 +24,7 @@
         width: auto;
         height: 130px;
         position: relative;
-        /* display: flex; */
-        /* flex-wrap: wrap; */
-        /* flex-direction: row; */
         /* justify-content: center; */
-        /* bottom: 250px; */
     }
 
     .pages{
@@ -49,18 +45,17 @@
     top: 9px;
 }
 
-/*
-.header-text h1, p{
+.header-text h1, .header-text p{
     position: relative;
     left: 130px;
     bottom: 88px;
     color: white;
     line-height: 0.01rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
-} */
+}  
 
 
-/* .header-text h1{
+.header-text h1{
     font-size: 40px;
     font-weight: 900;
     text-shadow: 1px 3px black;
@@ -69,7 +64,7 @@
     font-size: 19px;
     font-weight: lighter;
     letter-spacing: 4px;
-} */
+}  
 
 
 
@@ -136,7 +131,7 @@ nav .fa{
     .home{
         display: flex;
         flex-direction: row;
-        flex-wrap: wrap;
+        flex-wrap: wrap; 
         gap: 20px;
         margin: 20px auto;
         width: 100%;
@@ -197,7 +192,7 @@ nav .fa{
 
     .card1{
         background-color: silver;
-        width: 800px;
+        width: 700px;
         height: 300px;
         text-align: center;
     } 
@@ -210,14 +205,25 @@ nav .fa{
     }
 
     .card3{
-        background-color: silver;
-        color: black;
+        background-color: rgba(192, 192, 192, 0.932);
         width: 300px;
         height: 300px;
         text-align: center;
     } 
 
-    h2{
+    .card1 h2, .card2 h2, .card3 h2{
+        background-color: rgb(128, 128, 128);
+        color: white;
+        text-align: start;
+        position: relative;
+        bottom: 30px;
+        font-size: 28px;
+        font-weight: 900;
+        font-family: Arial, Helvetica, sans-serif;
+        padding-left: 20px;
+    }
+/* 
+    .card1 p, .card2 p, card3 p{
         background-color: gray;
         color: silver;
         text-align: start;
@@ -227,7 +233,8 @@ nav .fa{
         font-weight: 900;
         font-family: Arial, Helvetica, sans-serif;
         padding-left: 20px;
-    }
+    } */
+
 
     .card2 p{
         font-size: 18px;
@@ -235,6 +242,8 @@ nav .fa{
         text-align: left;
         padding-left: 140px;
         font-family: Arial, Helvetica, sans-serif;
+
+        justify-content: flex-start;
     }
     .card3 p{
         font-size: 18px;
@@ -243,29 +252,126 @@ nav .fa{
         padding-left: 80px;
         font-family: Arial, Helvetica, sans-serif;
     }
-/* 
-
-    .home p{
-        font-size: 50px;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        gap: 20px;
-        margin: 20px auto;
-        width: 100%;
-        align-items: center;
-        justify-content: center;
-        
-    } */
 
 
-    /* Play around with the  */
+/* <!-- The Section about the businesses list --> */
+.business-card1{
+    margin-top: 80px;
+    background-color: silver;
+    width: 300px;
+    height: 300px;
+    text-align: center;
+
+}
+
+.business-card1 img{
+    width: auto;
+    height: 100px;
+
+}
+
+
+
+.view-buttons{
+    margin-bottom: 10px;
+    width: 100%;
+    color: #f44336;
+}
+
+.directory {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1rem;
+}
+
+.card img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+/* This class will hide images */
+.hide-images img {
+    display: none;
+}
+
+.card{
+    border: 1px solid #ccc;
+    padding: 1rem;
+    /* background-color: #f9f9f9; */
+    background-color: #f9f9f9;
+    text-align: left;
+    border-radius: 8px;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
+    transition: transform 0.3s ease;
+}
+
+.card img {
+    width: 100%;
+    height: auto;
+    border-radius: 6px;
+}
+
+.card:hover {
+    transform: scale(1.02);
+}
+
+.card h3 {
+    font-size: 25px;
+    text-align: center;
+}
+
+/* .credential{
+    color: blue;
+} */
+
+
+
+.last-part{
+    margin: 20px;
+    padding: 40px;
+    width: 100%;
+    height: 120px;
+    background-color: silver;
+}
+
+.last-part{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 250px;
+    justify-content: center;
+}
+
+.social{
+    position: relative;
+    top: 50px;
+    gap: 150px;
+    font-size: 20px;
+    color: white;
+    
+}
+
+
+.fa-brands{
+    background-color: black;
+    margin: 5px;
+    padding: 5px;
+    border-radius: 50%;
+}
+
+#lastModified{
+    position: relative;
+    bottom: 15px;
+}
 
 
 
 
 
 /* Here are the codes for smaller screen */
+
+/* @media(max-width: 768px){ */
 
 @media(max-width: 768px){
     .header-text img{
@@ -281,9 +387,9 @@ nav .fa{
     .header-text h1, p{
     position: relative;
     left: 130px;
-    bottom: 50px;
+    bottom: 70px;
     color: white;
-    line-height: 0.01rem;
+    line-height: 2.5rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .header-text h1{
@@ -306,7 +412,7 @@ nav .fa{
         position: relative;
         background: #f44336;
         height: 100vh;
-        width: 200px;
+        width: 250px;
         top: -30px;
         right: -200px;
         text-align: left;
@@ -322,7 +428,7 @@ nav .fa{
         font-size: 22px;
         cursor: pointer;
         position: relative;
-        top: -20px;
+        top: -30px;
         padding-top: 25px;
     }
 
@@ -332,6 +438,252 @@ nav .fa{
         top: -675px;
         left: 50px;
     }
+
+        .home{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap; 
+        gap: 40px;
+        margin: 20px auto;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        
+    } 
+    
+    
+
+
+    .card1{
+        background-color: silver;
+        width: 80%;
+        height: 300px;
+        text-align: center;
+    } 
+
+    .card2{
+        background-color: silver;
+        width: 80%;
+        height: 300px;
+        text-align: center;
+    }
+
+    .card3{
+        background-color: silver;
+        width: 80%;
+        height: 300px;
+        text-align: center;
+    } 
+
+    .card1 h2, .card2 h2, .card3 h2{
+        background-color: gray;
+        color: white;
+        text-align: center;
+        position: relative;
+        bottom: 30px;
+        font-size: 22px;
+        font-weight: 900;
+        font-family: Arial, Helvetica, sans-serif;
+        padding-left: 20px;
+    }
+/* 
+    .card1 p, .card2 p, card3 p{
+        background-color: gray;
+        color: silver;
+        text-align: start;
+        position: relative;
+        bottom: 30px;
+        font-size: 28px;
+        font-weight: 900;
+        font-family: Arial, Helvetica, sans-serif;
+        padding-left: 20px;
+    } */
+
+
+    .card2 p{
+        font-size: 16px;
+        line-height: 1.8rem;
+        font-family: Arial, Helvetica, sans-serif;
+        position: relative;
+        bottom: 20px;
+        justify-content: left;
+        color: black;
+    
+        
+
+    }
+    .card3 p{
+        font-size: 16px;
+        line-height: 3.5rem;
+        font-family: Arial, Helvetica, sans-serif;
+        position: relative;
+        bottom: 20px;
+        justify-content: left;
+        color: black;
+    }
+
+    
+
+
+
+/* <!-- The Section about the businesses list --> */
+.business-card1{
+    margin-top: 80px;
+    background-color: silver;
+    width: 300px;
+    height: 300px;
+    text-align: center;
+
+}
+
+.business-card1 img{
+    width: auto;
+    height: 100px;
+
+}
+
+
+
+.view-buttons{
+    margin-bottom: 10px;
+    width: 100%;
+    color: #f44336;
+}
+
+.directory {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1rem;
+}
+
+.card img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+/* This class will hide images */
+.hide-images img {
+    display: none;
+}
+
+.card{
+    border: 1px solid #ccc;
+    padding: 1rem;
+    /* background-color: #f9f9f9; */
+    background-color: #f9f9f9;
+    color: black;
+    text-align: left;
+    border-radius: 8px;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
+    transition: transform 0.3s ease;
+}
+
+.card img {
+    width: 100%;
+    height: auto;
+    border-radius: 6px;
+}
+
+.card:hover {
+    transform: scale(1.02);
+}
+
+.card h3 {
+    font-size: 25px;
+    text-align: center;
+}
+
+.card p {
+    color: black;
+    text-align: center;
+    justify-content: center;
+    position: relative;
+    left: 10px;
+    top: 1px ;
+}
+
+
+
+/* About the footer */
+
+.last-part{
+    margin: 20px;
+    padding: 10px;
+    width: 100%;
+    height: 400px;
+    background-color: rgba(0, 0, 0, 0.84);
+    
+}
+
+.last-part{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap; 
+    /* gap: 250px; */
+    justify-content: center;
+}
+.part1{
+    position: relative;
+    bottom: 50px;
+    right: 30px;
+}
+.last-part h2{
+    color:white;
+    position: relative;
+    left: 125px;
+    bottom: 50px;
+    font-weight: 900;
+}
+
+.social{
+    position: relative;
+    top: 5px; 
+    gap: 150px;
+    font-size: 20px;
+    color: white;
+    right: 510px;
+    justify-content: center;
+    
+}
+.credential{
+    position: relative;
+    top: 180px;
+    right: 1100px;
+    justify-content: center;
+    line-height: 0.5rem;
+    
+}
+#lastModified{
+    position: relative;
+    top: -90px;
+    right: 1100px;
+    justify-content: center;
+    font-style: italic;
+
+
+    
+}
+/* 
+.part1, .social, credential{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap ;
+} */
+
+
+/* .fa-brands{
+    background-color: black;
+    margin: 5px;
+    padding: 5px;
+    border-radius: 50%;
+} */
+
+#lastModified{
+    position: relative;
+    bottom: 15px;
+}
+
 
 
 
