--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,23 +1,3 @@
-/* *{
-    height: 100vh;
-    margin: auto;
-    padding: auto;
-}  */
-
-/* *{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-} */
-
-
-/* .header-text{
-    background-color: red;
-    width: 100%;
-    height: 100px;
-    position: relative;
-    left: 50px;
-} */
 
     .header-text {
         background-color: blue;
@@ -45,6 +25,31 @@
     top: 9px;
 }
 
+header h1{
+    position: relative;
+    margin-left: 20px;
+    left: 120px;
+    top: 80px;
+    color:white;
+    line-height: 0.01rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    z-index: 2;
+}  
+
+
+.header-text h6{
+    position: relative;
+    font-weight: 100;
+    letter-spacing: 0.1rem;
+    font-size: 18px;
+    left: 140px;
+    bottom: 65px;
+    color: white;
+    line-height: 0.01rem;
+    z-index: 2;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}  
+
 .header-text h1, .header-text p{
     position: relative;
     left: 130px;
@@ -58,7 +63,7 @@
 .header-text h1{
     font-size: 40px;
     font-weight: 900;
-    text-shadow: 1px 3px black;
+    text-shadow: 1px 3px  #00000000;
 }
 .header-text p{
     font-size: 19px;
@@ -95,37 +100,16 @@
     height: 100vh;
     position: relative;
     bottom: 100px;
-    box-shadow: 0 150px 100px black;
+    /* box-shadow: 0 150px 100px black; */
+    box-shadow: 0 150px 100px  #00000000;
     /* box-shadow: 0 15px 10px rgba(0, 0, 0, 0.9); */
 }
 
-/* .nav-links ul::after{
-    content: '';
-    width: 0%;
-    height: 2px;
-    background-color: #f44336;
-    display: block;
-    margin: auto;
-    transition: 0.3s;
-} */
 
 nav .fa{
     display: none;
 }
 
-
-/* The second block about Home */
-    /* .card1 h2, .card2 h2, .card3 h3{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        gap: 20px;
-        margin: 20px auto;
-        width: 100%;
-        align-items: center;
-        justify-content: center;
-        
-    }  */
 
 
     .home{
@@ -140,53 +124,6 @@ nav .fa{
         
     }  
     
-    /* .card1, .card2, .card3{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        gap: 20px;
-        margin: 20px auto;
-        width: 100%;
-        align-items: center;
-        justify-content: center;
-        
-    }   */
-
-
-
-    /* .card1, .card2, .card3{
-        justify-content: center;
-        height: 200px;
-    } */
-
-
-    /* .card1 h2{
-        background-color: black;
-        color: blanchedalmond;
-        width: 900px;
-    } */
-
-
-/* 
-    .card1 {
-
-        background-color: silver;
-        width: 800px;
-        height: 300px;
-        text-align: center;
-    } */
-
-
-    /* .card1 p{
-        
-        background-color: grey;
-        height: 40px;
-        text-align: center;
-        color: blue;
-        font-size: 25px;
-        position: relative;
-        bottom: 75px; 
-    }*/
 
 
 
@@ -212,7 +149,8 @@ nav .fa{
     } 
 
     .card1 h2, .card2 h2, .card3 h2{
-        background-color: rgb(128, 128, 128);
+        /* background-color: rgb(128, 128, 128); */
+        background-color: black;
         color: white;
         text-align: start;
         position: relative;
@@ -275,7 +213,6 @@ nav .fa{
 .view-buttons{
     margin-bottom: 10px;
     width: 100%;
-    color: #f44336;
 }
 
 .directory {
@@ -296,13 +233,14 @@ nav .fa{
 }
 
 .card{
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
+    border: 1px solid #f9f9f9;
     padding: 1rem;
     /* background-color: #f9f9f9; */
     background-color: #f9f9f9;
     text-align: left;
     border-radius: 8px;
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
+    box-shadow: 2px 2px 10px #00000000;
     transition: transform 0.3s ease;
 }
 
@@ -329,10 +267,11 @@ nav .fa{
 
 .last-part{
     margin: 20px;
+    color: white;
     padding: 40px;
     width: 100%;
     height: 120px;
-    background-color: silver;
+    background-color: black;
 }
 
 .last-part{
@@ -354,7 +293,7 @@ nav .fa{
 
 
 .fa-brands{
-    background-color: black;
+    /* background-color: black; */
     margin: 5px;
     padding: 5px;
     border-radius: 50%;
@@ -383,12 +322,12 @@ nav .fa{
     top: 20px;
     }
 
-
+/* 
     .header-text h1, p{
     position: relative;
     left: 130px;
     bottom: 70px;
-    color: white;
+    color: red;
     line-height: 2.5rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
@@ -401,7 +340,34 @@ nav .fa{
     font-size: 12.5px;
     font-weight: lighter;
     letter-spacing: 4px;
-    }
+}
+ */
+    header h1{
+        font-size: 26px;
+    position: relative;
+    margin-left: 20px;
+    left: 100px;
+    top: 75px;
+    color:white;
+    line-height: 0.01rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    z-index: 2;
+}  
+
+
+.header-text h6{
+    position: relative;
+    font-weight: 100;
+    letter-spacing: 0.1rem;
+    font-size: 14px;
+    left: 120px;
+    bottom: 30px;
+    color: white;
+    line-height: 0.01rem;
+    z-index: 2;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}  
+
 
     .nav-links ul li{
         display: block;
@@ -410,7 +376,8 @@ nav .fa{
 
         .nav-links{
         position: relative;
-        background: #f44336;
+        /* background: #f44336; */
+        background: black;
         height: 100vh;
         width: 250px;
         top: -30px;
@@ -419,6 +386,12 @@ nav .fa{
         z-index: 2;
         transition: 1s;
     }
+
+
+    .nav-links ul li a{
+    text-decoration: none;
+    color: white;
+}
 
 
         nav .fa{
@@ -435,7 +408,7 @@ nav .fa{
     nav .fa-bars{
         color: white;
         position: relative;
-        top: -675px;
+        top: -700px;
         left: 50px;
     }
 
@@ -451,9 +424,6 @@ nav .fa{
         
     } 
     
-    
-
-
     .card1{
         background-color: silver;
         width: 80%;
@@ -476,7 +446,7 @@ nav .fa{
     } 
 
     .card1 h2, .card2 h2, .card3 h2{
-        background-color: gray;
+        background-color: black;
         color: white;
         text-align: center;
         position: relative;
@@ -486,18 +456,6 @@ nav .fa{
         font-family: Arial, Helvetica, sans-serif;
         padding-left: 20px;
     }
-/* 
-    .card1 p, .card2 p, card3 p{
-        background-color: gray;
-        color: silver;
-        text-align: start;
-        position: relative;
-        bottom: 30px;
-        font-size: 28px;
-        font-weight: 900;
-        font-family: Arial, Helvetica, sans-serif;
-        padding-left: 20px;
-    } */
 
 
     .card2 p{
@@ -607,71 +565,56 @@ nav .fa{
 
 /* About the footer */
 
-.last-part{
+/* .last-part{
     margin: 20px;
     padding: 10px;
     width: 100%;
-    height: 400px;
+    height: 800px;
     background-color: rgba(0, 0, 0, 0.84);
     
-}
+} */
 
-.last-part{
+
+/* footer{
+    margin: 20px;
+    padding: 10px;
+    width: 100%;
+    height: auto;
+    background-color: black;
+    
+} */
+
+/* .last-part{
     display: flex;
+    flex-direction: column;
+    flex-wrap: wrap; 
+    gap: 250px; 
+    justify-content: center;
+} */
+
+
+footer{
+    display: block;
     flex-direction: column;
     flex-wrap: wrap; 
     /* gap: 250px; */
     justify-content: center;
-}
-.part1{
-    position: relative;
-    bottom: 50px;
-    right: 30px;
-}
-.last-part h2{
-    color:white;
-    position: relative;
-    left: 125px;
-    bottom: 50px;
-    font-weight: 900;
+    text-align: center;
+    align-items: center;
+    color: #f9f9f9;
+    background-color: black;
+    padding: 20px;
 }
 
 .social{
-    position: relative;
-    top: 5px; 
-    gap: 150px;
-    font-size: 20px;
     color: white;
-    right: 510px;
-    justify-content: center;
-    
-}
-.credential{
+    display: block;
     position: relative;
-    top: 180px;
-    right: 1100px;
+    top: -8px;
     justify-content: center;
-    line-height: 0.5rem;
-    
+    text-align: center;
+    align-items: center;
 }
-#lastModified{
-    position: relative;
-    top: -90px;
-    right: 1100px;
-    justify-content: center;
-    font-style: italic;
-
-
-    
-}
-
-
-#lastModified{
-    position: relative;
-    bottom: 15px;
-}
-
-
 
 }
 
