--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -24,12 +24,22 @@
     top: 9px;
 }
 
-header h1{
+/* header h1{
     position: relative;
     margin-left: 20px;
     left: 120px;
     top: 80px;
     color:white;
+    line-height: 0.01rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    z-index: 2;
+}   */
+.head{
+    position: relative;
+    margin-left: 20px;
+    left: 100px;
+    bottom: 700px;
+    color: white;
     line-height: 0.01rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
     z-index: 2;
