--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -13,6 +13,7 @@
     background-position: center;
     background-size: cover;
     position: relative;
+    
 }
 
 .header-text img{
@@ -38,9 +39,10 @@
     position: relative;
     margin-left: 20px;
     left: 100px;
-    bottom: 700px;
+    bottom: 690px;
     color: white;
     line-height: 0.01rem;
+    font-size: 24px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     z-index: 2;
 }  
