--- a/chamber/styles/home.css
+++ b/chamber/styles/home.css
@@ -321,6 +321,17 @@ nav .fa{
     gap: 1rem;
 }
 
+
+.spotlight h2{
+    background-color: blue;
+    color: white;
+    font-size: 30px;
+    width: 350px;
+    text-align: center;
+    padding: 5px;
+    font-weight: 900;
+    font-family: Arial, Helvetica, sans-serif;
+}
 /* .card img {
     width: 100%;
     height: auto;
@@ -337,68 +348,6 @@ nav .fa{
     display: none;
 } */
 
-/* .card{
-    
-    border: 1px solid #f9f9f9;
-    padding: 1rem;
-    background-color: #f9f9f9;
-    text-align: left;
-    border-radius: 8px;
-    box-shadow: 2px 2px 10px #00000000;
-    transition: transform 0.3s ease;
-} */
-
-.spotlight{
-    
-    border: 1px solid #f9f9f9;
-    padding: 1rem;
-    background-color: #f9f9f9;
-    text-align: left;
-    border-radius: 8px;
-    box-shadow: 2px 2px 10px #00000000;
-    transition: transform 0.3s ease;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 50px;
-    justify-content: left;
-}
-
-/* .card img {
-    width: 100%;
-    height: auto;
-    border-radius: 6px;
-} */
-.spotlight-card img {
-    /* width: 300px;
-    height: auto;
-    border-radius: 6px; */
-    /* display: grid;
-    flex-direction: row;
-    flex-wrap: wrap; */
-    /* display: flex;
-    flex-direction: row; */
-}
-
-/* .card:hover {
-    transform: scale(1.02);
-} */
-/* .spotlight-card:hover {
-    transform: scale(1.02);
-} */
-
-/* .card h3 {
-    font-size: 25px;
-    text-align: center;
-} */
-/* .spotlight-card h3 {
-    font-size: 25px;
-    text-align: center;
-} */
-
-/* .credential{
-    color: blue;
-} */
 
 .spotlight-container{
     display: flex;
@@ -411,11 +360,11 @@ nav .fa{
 
 /* new */
 #spotlight-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-  justify-content: center;
-  padding: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+    padding: 1rem;
 }
 
 .spotlight-card {
@@ -508,9 +457,6 @@ footer{
     justify-content: center;
     text-align: left;
 }
-
-
-
 
 
 
@@ -769,7 +715,9 @@ footer{
     top: 1px ;
 }
 
-
+.spotlight-card {
+    flex: 1 1 calc(50% - 1rem);
+}
 
 /* About the footer */
 
