--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -126,19 +126,20 @@ nav .fa{
     display: none;
 }
 
-.home h1{
+.core h1{
     background-color: maroon;
     border-left: 4px solid blue;
-    width: 300px;
+    width: auto;
     height: auto;
     color: white;
     font-weight: 900;
     margin-left: 20px;
     text-align: center;
 }
-.home h1:hover{
+.core h1:hover{
     background-color: blue;
-    width: 300px;
+    border-left: 4px solid red;
+    width: auto;
     height: auto;
     color: white;
     font-weight: 900;
