--- a/finalproject/styles/base.css
+++ b/finalproject/styles/base.css
@@ -250,7 +250,7 @@ footer{
 
     .nav-links{
         position: absolute;
-        background: #f44336;
+        background: #FFC107;
         height: 100vh;
         width: 200px;
         top: 0;
@@ -285,6 +285,15 @@ footer{
 
 .nav-links ul li {
     margin: 10px 0;
+}
+
+nav a{
+    color: blue;
+    font-weight: 900;
+}
+
+nav .fa-times{
+    color: blue;
 }
 
 /* .nav-links ul li a {
