--- a/finalproject/styles/base.css
+++ b/finalproject/styles/base.css
@@ -9,7 +9,12 @@ body {
 
 h2, h3 {
     font-family: 'Poppins', sans-serif;
-    color: #3F51B5;
+    color: white;
+}
+
+h3 {
+    font-family: 'Poppins', sans-serif;
+    color: blue;
 }
 h1{
     font-family: 'Poppins', sans-serif;
@@ -32,7 +37,7 @@ h1{
 }
 
 header {
-    background: #3F51B5;
+    /* background: #3F51B5; */
     color: white;
     padding: 1rem;
     text-align: center;
@@ -44,7 +49,10 @@ header {
     color: white;
     font-weight: 900;
 }
-
+iframe{
+    width: 100%;
+    height: 400px;
+}
 .move{
     text-decoration: none;
     font-size: 18px;
