--- a/finalproject/styles/base.css
+++ b/finalproject/styles/base.css
@@ -92,9 +92,9 @@ nav a {
 /* nav a.active {
     border-bottom: 2px solid #FFC107;
 } */
-nav a:hover {
+/* nav a:hover {
     border-bottom: 2px solid #FFC107;
-}
+} */
 
 footer {
     background: black;
